<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    android:orientation="vertical"
    tools:context=".screen.fragment.FrmAskToAns">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:text="@string/noticeAddPoint"
        android:textColor="@color/colorNotifSuccess"
        android:textSize="@dimen/ts_35" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvYes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_tv_yes"
            android:textAlignment="center"
            android:textColor="@color/colorNotifSuccess"
            android:textSize="@dimen/ts_35" />

        <TextView
            android:id="@+id/tvNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/lbl_tv_no"
            android:textAlignment="center"
            android:textColor="@color/colorNotifSuccess"
            android:textSize="@dimen/ts_35" />

    </LinearLayout>

</LinearLayout>
