<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".screen.fragment.FrmTermsOfService">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:text="@string/lbl_tv_TermsOfService"
        android:textColor="@color/colorProgress"
        android:textSize="80sp"
        android:textStyle="bold" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
       android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/btnAgree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/lbl_tv_agree"
            android:textColor="@color/colorProgress"
            android:textSize="35sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/btnDisAgree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/lbl_tv_disagree"
            android:textColor="@color/colorProgress"
            android:textSize="35sp"
            android:textStyle="bold" />


    </LinearLayout>


</LinearLayout>